Symfony mailer lite & Redis modules

--- a/config/install/search_api.index.content.yml
+++ b/config/install/search_api.index.content.yml
@@ -6,7 +6,6 @@ dependencies:
     - search_api.server.database
   module:
     - node
-    - search_api
 id: content
 name: Content
 description: ''
@@ -59,4 +58,5 @@ options:
   cron_limit: 50
   index_directly: true
   track_changes_in_references: true
+  delete_on_fail: true
 server: database
