--- a/config/install/user.role.authenticated.yml
+++ b/config/install/user.role.authenticated.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - filter.format.full_html
+    - filter.format.webform_default
   module:
     - filter
     - system
@@ -13,3 +14,4 @@ is_admin: false
 permissions:
   - 'access content'
   - 'use text format full_html'
+  - 'use text format webform_default'
