--- a/config/install/field.field.block_content.basic_block.body.yml
+++ b/config/install/field.field.block_content.basic_block.body.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.body
-    - node.type.page
+    - block_content.type.basic_block
+    - field.storage.block_content.body
   module:
     - text
-id: node.page.body
+id: block_content.basic_block.body
 field_name: body
-entity_type: node
-bundle: page
+entity_type: block_content
+bundle: basic_block
 label: Body
 description: ''
 required: false
@@ -17,7 +17,7 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
   required_summary: false
   allowed_formats: {  }
 field_type: text_with_summary
