--- a/config/install/user.role.anonymous.yml
+++ b/config/install/user.role.anonymous.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - media
     - system
 id: anonymous
 label: 'Anonymous user'
@@ -9,3 +10,4 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'view media'
