--- a/config/install/user.role.authenticated.yml
+++ b/config/install/user.role.authenticated.yml
@@ -6,6 +6,7 @@ dependencies:
     - filter.format.webform_default
   module:
     - filter
+    - media
     - system
 id: authenticated
 label: 'Authenticated user'
@@ -15,3 +16,4 @@ permissions:
   - 'access content'
   - 'use text format full_html'
   - 'use text format webform_default'
+  - 'view media'
