--- a/config/install/editor.editor.full_html.yml
+++ b/config/install/editor.editor.full_html.yml
@@ -27,6 +27,7 @@ settings:
       - numberedList
       - '|'
       - blockQuote
+      - drupalMedia
       - insertTable
       - Accordion
       - iframeEmbed
