--- a/config/install/field.storage.node.layout_builder__layout.yml
+++ b/config/install/field.storage.node.layout_builder__layout.yml
@@ -12,7 +12,7 @@ settings: {  }
 module: layout_builder
 locked: true
 cardinality: 1
-translatable: false
+translatable: true
 indexes: {  }
 persist_with_no_fields: false
 custom_storage: false
