--- a/pixel_standard.info.yml
+++ b/pixel_standard.info.yml
@@ -41,6 +41,7 @@ install:
   - js_cookie
   - language
   - layout_builder
+  - layout_builder_at
   - layout_builder_operation_link
   - layout_discovery
   - link
