Easy email configuration

--- a/pixel_standard.info.yml
+++ b/pixel_standard.info.yml
@@ -25,6 +25,8 @@ install:
   - cookies
   - dynamic_page_cache
   - easy_breadcrumb
+  - easy
+  - easy_email_override
   - editor
   - editor_advanced_link
   - environment_indicator
