--- a/config/install/mailsystem.settings.yml
+++ b/config/install/mailsystem.settings.yml
@@ -7,3 +7,7 @@ modules:
     none:
       sender: symfony_mailer_lite
       formatter: symfony_mailer_lite
+  easy_email:
+    none:
+      sender: symfony_mailer_lite
+      formatter: symfony_mailer_lite
