--- a/config/install/easy_email.easy_email_type.user_password_recovery.yml
+++ b/config/install/easy_email.easy_email_type.user_password_recovery.yml
@@ -10,10 +10,10 @@ bcc: {  }
 fromName: ''
 fromAddress: ''
 replyToAddress: ''
-subject: 'Password reset for your [site:mail] account'
+subject: 'Password reset for your [site:name] account'
 inboxPreview: ''
 bodyHtml:
-  value: '<p>Hello,</p><p>We received a password reset request for your [site:mail] account.</p><p>To reset your password click on the following link:</p><p class="text-align-center"><a href="one-time-login-url]"><strong>Reset your password</strong></a></p><p>Best regards,<br>The [site:mail] team</p>'
+  value: '<p>Hello,</p><p>We received a password reset request for your [site:name] account.</p><p>To reset your password click on the following link:</p><p class="text-align-center"><a href="[easy_email:recipient_uid:0:entity:one-time-login-url]"><strong>Reset your password</strong></a></p><p>Best regards,<br>The [site:name] team</p>'
   format: full_html
 bodyPlain: ''
 generateBodyPlain: false
